<resources>
    <string name="app_name">Fast Order</string>
    <string name="_4_99">$ 4.99</string>
    <string name="_5_99">$ 5.99</string>
    <string name="_6_99">$ 6.99</string>
    <string name="_0_00">$0.00</string>
    <string name="your_total">Your Total</string>
    <string name="order_now">ORder nOW!!</string>
    <string name="innout">In N Out</string>
    <string name="phils">Phil\'s BBQ</string>

</resources>
