<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.geres.fastorder.SendOrder"
    android:background="@drawable/innoutsign">

    <TextView
        android:id="@+id/totaltv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_total"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/moneytv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_0_00"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/totaltv"
        app:layout_constraintHorizontal_bias="0.501" />

    <Button
        android:id="@+id/orderBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_now"
        android:onClick="orderNow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="290dp"
        app:layout_constraintTop_toBottomOf="@+id/moneytv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
